# Imou-Home-Assistant

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  feedback.md  question.md
.github/scripts/: close_inactive_author_issues.py
.github/workflows/: ci-lint.yml  ci-test.yml  close_inactive_issues.yaml  issue_opened_auto_reply.yaml  release_assets.yaml  validate.yaml
assets/images/: appMsg.jfif  list.jfif  login.jfif
custom_components/imou_life/: __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  en.json  entity.py  event_push.py  helpers.py  icons.json  manifest.json  runtime_data.py  select.py  sensor.py  services.yaml  strings.json  switch.py  text.py  webhook.py  zh-Hans.json
custom_components/imou_life/translations/: en.json  zh-Hans.json
custom_components/imou_life/webhook_strings/: en.json  zh-Hans.json
script/: lint  lint-check
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_webhook.py
